--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 	<ul id="console">
-		<h3>Prove your knowledge in web technology, programming languages and hacking.</h3>
+		<h3>Prove your knowledge in web technology, programming and hacking.</h3>
 		<li>
 			<span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
 		</li>
