added dr. riddle image and did some formatting

--- a/47f817e1588c77305b6997e6e07c9090.html
+++ b/47f817e1588c77305b6997e6e07c9090.html
@@ -18,10 +18,10 @@
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
 
-        <span class="gm">Dr. Riddle</span>:
-        It seems you are really wild! You must belong to the Wild Devs.<br />
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
+        It seems you are really wild! You must belong to the Wild Devs. I didn't know that...<br />
 
-        <span class="gm">Dr. Riddle</span>:
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
         But now, you have to look deeper. Sometimes we don't see the obvious.<br />
 
         <h2>Level #3</h2>
