--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 		<li>
 			<span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
 		</li>
-		The goal of this game is to use your knowledge of web technology, programming and hacking techniques to get from
-		level<br />
 
-		to level, using any legal method. Each level is slightly more difficult than the previous one. Your task in each
-		level<br />
-
-		is to find a password that will lead you to the next level. We wish you a lot of fun while
-		hacking/playing.<br />
+		The goal of this game is to use your knowledge of web technology, programming and hacking
+		techniques to
+		get from<br />
+		level to level, using any legal method. Each level is slightly more difficult than the
+		divvious one.<br />
+		Your task in each level is to find a password that will lead you to the next level. We wish
+		you a lot
+		of fun while hacking/playing.<br />
 
 		<h2>Level #1</h2>
 		Password: <input type="text" id="password"></input>
