--- a/987f9ebc44072eef9626308e319d1a45.html
+++ b/987f9ebc44072eef9626308e319d1a45.html
@@ -6,10 +6,17 @@
 <head>
     <meta http-equiv="Content-Language" content="en-us">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Hacking Simulator | Wild Devs | Level 2 | String.fromCharCode(119, 105, 108, 100)</title>
+    <title>Hacking Simulator | Wild Devs | Level 7</title>
     <meta name="Keywords" content="">
     <meta name="Description" content="">
 </head>
+<!-- darklight -->
+<style>
+    body {
+        background: rgb(0, 0, 0);
+        background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.8547794117647058) 53%, rgba(0, 0, 0, 1) 100%);
+    }
+</style>
 
 <body>
     <ul id="console">
@@ -17,24 +24,20 @@
         <li>
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
+        <br />
+        <!-- images -->
+        <span class="betty"><img src="images/betty.png" /> Betty</span>: There is light! THERE IS LIGHT! Can you see it?
+        FINALLY. THANK YOU <span style='font-size:24px;'>&#128149;</span>
+        <br />
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
-        How... how did you get there? This is a hidden place! You are not allowed to
-        be here! How is it even possible?<br />
+        <span class="betty"><img src="images/betty.png" /> Betty</span>: Let's continue. Light it up and open the door.
+        <br />
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
-        By the way, I am Dr. Riddle, the creator of this world, MY WORLD! I will stop you from continuing until you
-        show me that you are worth being here.<br />
-
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
-        It looks like you have a lot of experience. Then let's put you to the test.
-        I will keep it easy, for now... hahahahaha.
-
-        <h2>Level #2</h2>
+        <h2>Level #7</h2>
         Password: <input type="text" id="password"></input>
     </ul>
-
 </body>
+<!-- psd -->
 <script src="script.js"></script>
 <script>
     var password = document.getElementById("password");
@@ -42,7 +45,7 @@
         if (event.key === "Enter") {
             event.preventDefault();
 
-            nextLevel(2, password.value);
+            nextLevel(7, password.value);
         }
     });
 </script>
