--- a/745ca30961f76181c5d100b3b4bd902f.html
+++ b/745ca30961f76181c5d100b3b4bd902f.html
@@ -19,7 +19,7 @@
         </li>
 
         <span class="betty"><img src="images/betty.png" /> Unknown</span>: Hey there! I'm glad that you figured it out
-        how to escape Dr. Riddle.<br />
+        how to escape Dr. Riddler.<br />
         <span class="betty"><img src="images/betty.png" /> Betty</span>: I'm Betty, been here for a while and stuck at
         this level.<br />
         <span class="betty"><img src="images/betty.png" /> Betty</span>: Can you help me to get out of here? I don't
