--- a/881301b7eefadfa7f7b5453c749b804e.html
+++ b/881301b7eefadfa7f7b5453c749b804e.html
@@ -18,7 +18,7 @@
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
         Do you like jokes? No? I will tell you anyway.<br /><br />
 
         <div style="width: 30%; border: #808080 dashed 2px; padding: 15px; margin: 10px;">
