--- a/a782ab6d45f609eedf0d948ffe1604a3.html
+++ b/a782ab6d45f609eedf0d948ffe1604a3.html
@@ -18,16 +18,16 @@
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
         Okay okay, it's enough. This is the end of the road for you. <br />
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>: I'm closing all the doors now. You are
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>: I'm closing all the doors now. You are
         trapped here and there is no escape. I win, you lose,
         HAHAHAHAHA<br /><br />
 
         <strong><i>From a dark corner comes a quiet whisper</i></strong><br /><br />
 
         <span class="betty"><img src="images/betty.png" /> Unknown</span>: Psssst, don't look at me, I'm hiding from Dr.
-        Riddle. He keeps me imprisoned here too in his cruel world, but I escaped this level.<br />
+        Riddler. He keeps me imprisoned here too in his cruel world, but I escaped this level.<br />
         <span class="betty"><img src="images/betty.png" /> Unknown</span>: He is hashing his levels in the url. You need
         to escape too and meet me in the "level6", I will wait for
         you.<br />
