--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		techniques to
 		get from<br />
 		level to level, using any legal method. Each level is slightly more difficult than the
-		divvious one.<br />
+		previous one.<br />
 		Your task in each level is to find a password that will lead you to the next level. We wish
 		you a lot
 		of fun while hacking/playing.<br />
