--- a/df33a11afc88fc38539099b27ec89ff7.html
+++ b/df33a11afc88fc38539099b27ec89ff7.html
@@ -18,15 +18,15 @@
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
         How... how did you get there? This is a hidden place! You are not allowed to
         be here! How is it even possible?<br />
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
-        By the way, I am Dr. Riddle, the creator of this world, MY WORLD! I will stop you from continuing until you
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
+        By the way, I am Dr. Riddler, the creator of this world, MY WORLD! I will stop you from continuing until you
         show me that you are worth being here.<br />
 
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddle</span>:
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
         It looks like you have a lot of experience. Then let's put you to the test.
         I will keep it easy, for now... hahahahaha.
 
