Level 8 content added

--- a/1e156077e765039e0c294e2d4bd982b9.html
+++ b/1e156077e765039e0c294e2d4bd982b9.html
@@ -7,15 +7,9 @@
     <meta http-equiv="Content-Language" content="en-us">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Hacking Simulator | Wild Devs | Level 8</title>
-    <meta name="Keywords" content="">
-    <meta name="Description" content="">
+    <meta name="Keywords" content="U3RlZ2Fub2dyYXBoeSwgRW5jb2RlLCBEZWNvZGU=">
+    <meta name="Description" content="VGhlcmUgaXMgc29tZXRoaW5nIGluIG15IHBpY3R1cmUsIGNhbiB5b3Ugc2VlIGl0Pw==">
 </head>
-<style>
-    body {
-        background: rgb(0, 0, 0);
-        background: linear-gradient(90deg, rgba(0, 0, 0, 1) 0%, rgba(70, 24, 24, 0.8547794117647058) 53%, rgba(0, 0, 0, 1) 100%);
-    }
-</style>
 
 <body>
     <ul id="console">
@@ -26,10 +20,18 @@
 
         <span class="betty"><img src="images/betty.png" /> Betty</span>: Mh... it still... dark here and scary.<br />
         <span class="betty"><img src="images/betty.png" /> Betty</span>: We need to find more hints to get out of
-        here.<br />
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>: We need to find more hints to get out of
-        here.<br />
+        here.<br /><br />
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>: Hey! What are you doing here?! Where do
+        you want to go? THERE IS NO ESCAPE! <br />
+        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>: I will make sure that you will not get any
+        futher. You are my hostages here <strong>IN</strong> my world!<br />
+
+        <img src="images/The_Blue_Marble.png" />
+
+        <br />
+
         <h2>Level #8</h2>
+        Password: <input type="text" name="pRaL6y1s" id="password"></input>
     </ul>
 
 </body>
