--- a/1e156077e765039e0c294e2d4bd982b9.html
+++ b/1e156077e765039e0c294e2d4bd982b9.html
@@ -7,8 +7,9 @@
     <meta http-equiv="Content-Language" content="en-us">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Hacking Simulator | Wild Devs | Level 8</title>
-    <meta name="Keywords" content="U3RlZ2Fub2dyYXBoeSwgRW5jb2RlLCBEZWNvZGU=">
-    <meta name="Description" content="VGhlcmUgaXMgc29tZXRoaW5nIGluIG15IHBpY3R1cmUsIGNhbiB5b3Ugc2VlIGl0Pw==">
+    <meta name="Keywords" content="VTNSbFoyRnViMmR5WVhCb2VTd2dSVzVqYjJSbExDQkVaV052WkdVPQ==">
+    <meta name="Description"
+        content="VkdobGNtVWdhWE1nYzI5dFpYUm9hVzVuSUdsdUlHMTVJSEJwWTNSMWNtVXNJR05oYmlCNWIzVWdjMlZsSUdsMFB3PT0=">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
         <br />
 
         <h2>Level #8</h2>
-        Password: <input type="text" name="pRaL6y1s" id="password"></input>
+        Password: <input type="text" id="password"></input>
     </ul>
 
 </body>
