--- a/6a8748ff2a49f969f70a92625581adde.html
+++ b/6a8748ff2a49f969f70a92625581adde.html
@@ -1,7 +1,42 @@
-<style>
-    body {
-        background-color: black;
-    }
-</style>
+<html>
 
-WIP: Level 9
+<link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+<link href="style.css" rel="stylesheet">
+
+<head>
+    <meta http-equiv="Content-Language" content="en-us">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Hacking Simulator | Wild Devs | Level 9</title>
+    <meta name="Keywords" content="">
+    <meta name="Description" content="">
+</head>
+
+<body>
+    <ul id="console">
+        <h3>Prove your knowledge in web technology, programming and hacking.</h3>
+        <li>
+            <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
+        </li>
+
+        <h3>
+            m n t e n n r v e i o
+        </h3>
+
+        <h2>Level #9</h2>
+        Password: <input type="text" id="password"></input>
+    </ul>
+
+</body>
+<script src="script.js"></script>
+<script>
+    var password = document.getElementById("password");
+    password.addEventListener("keypress", (event) => {
+        if (event.key === "Enter") {
+            event.preventDefault();
+
+            nextLevel(9, password.value);
+        }
+    });
+</script>
+
+</html>
