buffed level 8 with another hint

--- a/1e156077e765039e0c294e2d4bd982b9.html
+++ b/1e156077e765039e0c294e2d4bd982b9.html
@@ -27,7 +27,7 @@
         <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>: I will make sure that you will not get any
         futher. You are my hostages here <strong>IN</strong> my world!<br />
 
-        <img src="images/The_Blue_Marble.png" />
+        <img src="images/The_Blue_Marble.png" alt="m a n y t o o l s o r g" />
 
         <br />
 
