--- a/index.html
+++ b/index.html
@@ -17,37 +17,49 @@
 		<li>
 			<span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
 		</li>
-
-		The goal of this game is to use your knowledge of web technology, programming and hacking
-		techniques to
-		get from<br />
-		level to level, using any legal method. Each level is slightly more difficult than the
-		previous one.<br />
-		Your task in each level is to find a password that will lead you to the next level. We wish
-		you a lot
-		of fun while hacking/playing.<br />
-
 		<h2>Level #1</h2>
+		<span class="gm" id="talker"></span>:
+		<div id="dialog"></div><br />
 		Password: <input type="text" id="password"></input>
 	</ul>
 </body>
+
+<script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
 
 <script src="script.js"></script>
 <script>
 	var password = document.getElementById("password");
 	password.addEventListener("keypress", (event) => {
-		if (event.key === "Enter") {
-			event.preventDefault();
-
-			// if (password.value != "null") {
+	if (event.key === "Enter") {
+		event.preventDefault();
+		
+		// if (password.value != "null") {
 			// 	alert("Try again");
-			// } else {
+		// } else {
 			// 	alert("Good Job!");
 			// }
-
+			
 			nextLevel(1, password.value);
 		}
 	});
+
+	var story = [
+		{
+			name: 'System',
+			image: 'images/system.png',
+			dialogs: [
+				'Welcome! This is a hacking simulator, made by the Wild Devs Community, where everyone can contribute to this project.',
+				'The goal of this game is to use your knowledge of web technology, programming and hacking techniques to get from level to level ...',
+				'... using any legal method. Each level is slightly more difficult than the previous one. Your task in each level is to find a password that ...', 
+				'... will lead you to the next level. We wish you a lot of fun while hacking/playing.'
+			]
+		}
+	];
+	
+	startDialog(story);
 </script>
 
 </html>
