--- a/47f817e1588c77305b6997e6e07c9090.html
+++ b/47f817e1588c77305b6997e6e07c9090.html
@@ -17,18 +17,20 @@
         <li>
             <span>A hacking simulator by the <a href="https://wild-devs.net">Wild Devs Community</a>.</span>
         </li>
-
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
-        It seems you are really wild! You must belong to the Wild Devs. I didn't know that...<br />
-
-        <span class="gm"><img src="images/riddler.png" /> Dr. Riddler</span>:
-        But now, you have to look deeper. Sometimes we don't see the obvious.<br />
-
+        
         <h2>Level #3</h2>
+        <span class="gm" id="talker"></span>:
+        <div id="dialog"></div><br />
         Password: <input type="text" name="pRaL6y1s" id="password"></input>
     </ul>
 
 </body>
+
+<script
+  src="https://code.jquery.com/jquery-3.6.1.min.js"
+  integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+  crossorigin="anonymous"></script>
+
 <script src="script.js"></script>
 <script>
     var password = document.getElementById("password");
@@ -39,6 +41,19 @@
             nextLevel(3, password.value);
         }
     });
+
+    var story = [
+        {
+            name: 'Dr. Riddler',
+            image: 'images/riddler.png',
+            dialogs: [
+                'It seems you are really wild! You must belong to the Wild Devs. I didn\'t know that...',
+                'But now, you have to look deeper. Sometimes we don\'t see the obvious.'
+            ]
+        }
+	];
+	
+	startDialog(story);
 </script>
 
 </html>
